# tilia

./: .gitignore  Cargo.toml  run.sh
.cargo/: config.toml
src/: allocator.rs  debug_printer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/devices/: ata.rs  mod.rs  pci.rs
src/filesystems/: fat32.rs  mod.rs
